# wanderline

./: .gitignore  CLAUDE.md  README.md  benchmark_memory_efficient.py  config.json  config.sample.json  config_example_new.json  config_spec.py  conftest.py  design_proposal_config.py  example_practical_config_integration.py  example_usage_immutable_config.py  immutable_config_design.py  pyproject.toml  pytest.ini  run_test.py  temp_200_0.json  temp_config_memory_efficient_mode.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: TODO.md  (+12 more)
robot/demos/phase1/: CMakeLists.txt  PEN_ORIENTATION_BUG.md  __init__.py  analyze_actual_divergence.py  analyze_pen_trail.py  calculate_base_joints.py  canvas_coordinate_system.py  canvas_preview.py  config.yaml  config_loader.py  coord_mapper.py  coordinate_calculator.py  corrected_coordinate_system.py  frames_2025-07-29_07.12.49.gv  frames_2025-07-29_07.33.52.gv  main.py  package.xml  pen_divergence_analyzer.py  robot_motion_system.py  run_vnc_test.sh  rviz_view_node.py  system_state.py  test_coordinate_precision.py  test_vnc.py  workspace_interpolation.py
robot/demos/phase1/coordinate_analysis/: debug_coords.csv  pen_trail_analysis_20250725_025747.csv  pen_trail_analysis_20250725_031244.csv  pen_trail_analysis_20250725_031539.csv  pen_trail_analysis_20250725_031812.csv  pen_trail_analysis_20250725_032024.csv  pen_trail_analysis_20250725_054428.csv  pen_trail_analysis_20250725_054713.csv  pen_trail_analysis_20250725_062057.csv  pen_trail_analysis_20250725_063638.csv  pen_trail_analysis_20250725_063943.csv  pen_trail_analysis_20250725_065736.csv  pentip_coords.csv
robot/demos/phase1/msgs/: PenState.msg
(+85 files in other folders)
