[project]
name = "wanderline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python",
    "scikit-image",
    "pillow",
    "matplotlib",
    "pytest>=8.4.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "pyyaml>=6.0.2",
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
